[package]
name = "viz-rust"
version = "0.1.0"
authors = ["trashcognito <denizmersinlioglu2005@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version = "1.4.3", optional = true}
rand = {version = "0.8.4", optional = true}
[features]
default = ["pc"]
pc = ["byteorder", "rand"]